--- a/index.html
+++ b/index.html
@@ -1,86 +1,40 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<title> Gym Workout website tempalate</title>
-<!-- for-mobile-apps -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Gym Workout Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-<!-- //for-mobile-apps -->
-<link href="css/bootstrap.css" rel="stylesheet" />
-<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
-<link href="css/style.css" rel="stylesheet"  />
-<!--fonts-->
-<link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
-
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>calendar</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body> 
-        <!--<nav class="navbar navbar-expand-md navbar-light fixed-top py-4" id="main-nav">
-                <div class="container">
-                  <a href="#home" class="navbar-brand">
-                    <img src="img/one.png" width="50" height="50" alt="">
-                    <h3 class="d-inline align-middle">Mizuxe</h3>
-                  </a>
-                  <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav ml-auto">
-                      <li class="nav-item">
-                        <a href="#home" class="nav-link">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="#about" class="nav-link">About</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="#authors" class="nav-link">Meet The Authors</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="#contact" class="nav-link">Contact</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-            -->
+<body>
+    <div class="container py-3 mt-5">
+        <div class="row">
+            <div class="col-md-2 py-3 mt-3">
+                <h1 class="bg-danger text-white">  EVENTS </h1>
+            </div>
+            <div class="col-md-2 py-3 mt-3 ml-auto">
+                <h1> 12:08 </h1>
+                <h5>MAY 22,2017</h5>
+            </div>
+            <!-- <section></section> -->
+    </div>
+    <div class="row">
+        <div class="col-lg-11 bg-white ml-2">
+            <h1 class="text-danger bg-white">Today</h1>
+            <hr>
+            <h3 class="campus">Campus Visit </h3> 
+            <p>The campus visit combines our information session with a campus tourthat either or follows the information session Afernoon campus visit option are offersed at 1:00 and 2:00pm</p>
+        </div>
+    </div>
+</div>
 
 
-              <nav class="navbar navbar-expand-md navbar-light  fixed-top py-4" id="main-nav">
-                <div class="container">
-                  <a href="#home" class="navbar-brand">
-                    <img src="img/one.png" width="50" height="50" alt="">
-                    <h3 class="d-inline align-middle">Mizuxe</h3>
-                  </a>
-                  <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav ml-auto">
-                      <li class="nav-item">
-                        <a href="#home" class="nav-link">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="#about" class="nav-link">About</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="#authors" class="nav-link">Meet The Authors</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="#contact" class="nav-link">Contact</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-<script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
