--- a/index.html
+++ b/index.html
@@ -3,38 +3,111 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>calendar</title>
+    <title>Royal Pavillion</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container py-3 mt-5">
-        <div class="row">
-            <div class="col-md-2 py-3 mt-3">
-                <h1 class="bg-danger text-white">  EVENTS </h1>
+    <nav class="navbar navbar-expand-md  py-3 mt-3"> 
+     <div class="container navbarf">
+        <a href="#"><img src="./img/logo_royal.gif"></a>   
+            <div class="row-md-3 bg-dark">
+                <div class="col-md-3 ">
+                    <ul class=" navbar-nav ml-auto">
+                        <li><a href="#" class="nav-link text-danger ml-3">Home</a></li>
+                        <li><a href="#" class="nav-link text-danger ml-3">About</a></li>
+                        <li><a href="#" class="nav-link text-danger ml-3">Contact</a></li>
+                        <li><a href="#" class="nav-link text-danger ml-3">Careers</a></li>
+                        <li><a href="#" class="nav-link text-danger ml-3">rates</a></li>
+                        <li><a href="#" class="nav-link text-danger ml-3">Location</a></li>
+                        <li><a href="#" class="nav-link text-danger ml-3">reservation</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md-2 py-3 mt-3 ml-auto">
-                <h1> 12:08 </h1>
-                <h5>MAY 22,2017</h5>
-            </div>
-            <!-- <section></section> -->
-    </div>
-    <div class="row">
-        <div class="col-lg-11 bg-white ml-2">
-            <h1 class="text-danger bg-white">Today</h1>
-            <hr>
-            <h3 class="campus">Campus Visit </h3> 
-            <p>The campus visit combines our information session with a campus tourthat either or follows the information session Afernoon campus visit option are offersed at 1:00 and 2:00pm</p>
         </div>
-    </div>
-</div>
+    </nav>
+    <section class="sec py-2 mt-2 ">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 bg-danger">
+                    <h4 class="High">Room Category</h4>
+                    <hr>
+                    <h6 class="text-white">Room Category</h6>
+                    <hr>
+                    <h6 class="text-white">Room Category</h6>
+                    <hr>
+                    <h6 class="text-white">Room Category</h6>
+                    <hr>
+                    <h6 class="text-white">Room Category</h6>
+                    <hr>
+                    <h6 class="text-white">Room Category</h6>
+                    <hr>
+                    <h6 class="text-white">Room Category</h6>
+                    <hr>
+                    <h6 class="text-white">Room Category</h6>
+                    <hr>
+                    <h6 class="text-white">Room Category</h6>
+                    <hr>
+                </div>
+                
+                <div class="col-md-7 bg-white overflow-none">
+                    <h4 style="color:orange"> Welcome to Royal Thai Pavilion Jomtien Boutique Resort </h4>
+                        <p class="paragraphic">Welcome to Royal Thai Pavilion Jomtien Boutique Resort, we are a luxury beach-fronted boutique resort just a few short steps away from in the heart of Pattaya overlooking the ocean and 
+                            Koh Larn (Coral Island) literally stunning views all around the Gulf of Thailand.
+                             We are the best boutique resort in Pattaya and the only resort in Jomtien Pattaya to employ the latest salt-water 
+                             pool technology, so if you want to pamper yourself and use the only pool in Jomtien Pattaya that guarantees
+                              you’ll feel thoroughly refreshed and invigorated, then we are the only choice. But that’s not all we offer,
+                               we have a whole host of services included as part of our standard service, try our accommodation, you’ll agree 
+                               they exceed any expectation you have, and enjoy natural beauty spots, and ocean. You’ll never want to leave.
+                               they exceed any expectation you have, and enjoy natural beauty spots,
+                               they exceed any expectation you have, and enjoy natural beauty spots,
+                               they exceed any expectation you have, and enjoy natural beauty spots,</p>
+                               <div class="d-flex flex-row">
+                                 <img src="./img/photo_home1.jpg">
+                                 <img src="./img/photo_home3.jpg">
+                               </div>
+                               Try any of our oversized suites or the Jomtien classic villas, we lead the way in luxury and hospitality with
+                                you at the centre of our resort. We have as standard plush bathrobes, complimentary drinking water, tea and coffee facilities, wireless internet, and large flat screen LCD TV 32”. For the best in luxury accommodation stay with us in our Royal Thai Jomtien classic 
+                               villas each with their own private Jacuzzi and swimming pool using the latest salt-water technology.
+                               If you are planning to visit Pattaya, Thailand then you want peace of mind knowing you are staying at the best 
+                               boutique resort in Pattaya, Royal Thai Pavilion Jomtien Boutique Resort. We are the perfect resort for your holiday 
+                               catering for families, business executives or individuals, whatever your requirement you’ll find our suites charming, calm as they are accessible. We host business events, conferencing, and weddings – you’ll have to book early as they are in demand.
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+                    </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+    <div class="container-fluid">
+     <div class="row ml-auto">
+            <div class="xx col-lg-9">
+                <a href="#" class="x"> home  </a>
+            </div>
+        </div>
+     </div>
+    </section>
+
+    <footer class="footcolor">
+        <div class="container-fluid">
+            <div class="row px-5 ml-4">
+                <div class="col-md-5 text-white">
+                    <p>Royal Thai Pavilion Jomtien Boutique Resort Pattaya   
+                    246/91 Moo 12, Jomtien Beach Road, Nongprue, 
+                    Banglamung, Chonburi 20260.  Tel: +66 (0) 3823 2311-2   Fax: +66 (0) 3823 2344  
+                    E-mail: royalthaijomtien@yahoo.com, sales@royalthaijomtien.com</p>
+                </div>
+                <div class="col-md-5  py-4 mt-5 text-white">
+                    <p>@Copyright © All rights reserved. www.royalthaijomtien.com
+                        </p>    
+                </div>
+            </div>
+        </div>
+    </footer>
+    
 </body>
 </html>
